# secure-content-auth

./: .gitignore  README.md  _tc.sig  private.pem  public.pem  pyproject.toml  requirements.txt
app/: app.py
docs/demo/: README.md  demo_out_wm.sig.txt  demo_public.pem
scripts/: demo_end_to_end.sh  demo_tamper_cases.sh  generate_demo_artifacts.py
src/: cli.py
src/crypto/: hashing.py  keys.py  signature.py
src/pipeline/: bind.py
src/watermark/: dct.py  lsb.py
tests/: test_dct_roundtrip.py  test_lsb_roundtrip.py  test_sign_verify.py
